--- a/src/style.css
+++ b/src/style.css
@@ -80,7 +80,7 @@ h1 {
   padding-top: 115px;
 }
 
-.container-team {
+.team {
   height: 910px;
   background-color: #e7f1f8;
   color: #717b8f;
@@ -88,7 +88,8 @@ h1 {
 
 .title-wrap h2 {
   font-size: 40px;
-  font-weight: 400;
+  font-weight: 700;
+  letter-spacing: 3px;
 }
 
 .title-wrap p {
@@ -100,7 +101,7 @@ h1 {
   margin-top: -10px;
 }
 
-.team-container {
+.container  {
   width: 1100px;
   margin: 0 auto;
   margin-top: 80px;
@@ -108,14 +109,14 @@ h1 {
   justify-content: space-between;
 }
 
-.person-container {
+.item-container {
   width: 260px;
   text-align: center;
 }
 
-.person-container h3 {
+.item-container h3 {
   font-size: 24px;
-  margin-top: 20px;
+  margin-top: 30px;
   color:#27283d;
 }
 
@@ -124,11 +125,32 @@ h1 {
   margin-top: -5px;
 }
 
-.person-container p {
+.item-container p {
   margin-top: 10px;
 }
 
 .social_icons {
   margin-top: 35px;
   word-spacing: 10px;
+}
+
+.services {
+  height: 750px;
+  background-color: #17c2a4;
+  color: #ffffff;
+}
+
+.name_service {
+  font-size: 24px;
+  margin-top: 40px;
+  font-weight: 400;
+  color: #ffffff;
+}
+
+.rocket_img {
+  margin-bottom: -9px;
+}
+
+.crayon_img {
+  margin-bottom: -6px;
 }
