--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,8 @@
 body {
   font-family: 'Titillium Web', sans-serif;
   color: #717b8f;
-  padding: 0px;
-  margin: 0px;
+  padding: 0;
+  margin: 0;
 }
 
 div {
@@ -13,7 +13,7 @@ header {
   height: 550px;
   width: 1440px;
   background-color: #87509c;
-  margin: 0px auto;
+  margin: 0 auto;
   color: #fff;
 }
 
@@ -241,6 +241,68 @@ h1 {
 }
 
 .portfolio_container img {
-  
-  margin-top: 50px;
+    margin-top: 50px;
+}
+
+.portfolio_button {
+  text-align: center;
+  text-transform: uppercase;
+  margin-top: 80px;
+  margin-left: 600px;
+  font-size: 18px;
+  background-color: #17c2a4;
+  color: #ffffff;
+  border-radius: 4px;
+  display: block;
+  width: 300px;
+  height: 70px;
+  border: hidden;
+}
+
+.what_people_say {
+  height: 900px;
+  background-color: #d74680;
+  color: #ffffff;
+} 
+
+.people-container {
+  text-align: left;
+  max-width: 330px;
+  margin-right: 30px;
+}
+
+.people-container h3 {
+  color: #FFF;
+  margin-top: 25px;
+  text-transform: uppercase;
+}
+
+.people-container .status {
+  color: #ee9c8e;
+  margin-top: -10px;
+}
+
+q {
+  font-style: italic;
+  max-width: 200px;
+}
+
+.item-wrap {
+  display:  flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.people-wrap {
+  width: 540px;
+}
+
+.mrg {
+  margin-top: 140px;   
+}
+
+.forms {
+  height: 820px;
+  background-color: #3c5499; 
+  color: #fff;
 }
