--- a/src/style.css
+++ b/src/style.css
@@ -265,19 +265,19 @@ h1 {
   color: #ffffff;
 } 
 
-.people-container {
+article {
   text-align: left;
   max-width: 330px;
   margin-right: 30px;
 }
 
-.people-container h3 {
+article h3 {
   color: #FFF;
   margin-top: 25px;
   text-transform: uppercase;
 }
 
-.people-container .status {
+article .status {
   color: #ee9c8e;
   margin-top: -10px;
 }
@@ -305,4 +305,82 @@ q {
   height: 820px;
   background-color: #3c5499; 
   color: #fff;
+}
+
+form {
+  height: 280px;
+  position: relative;
+  width: 840px;
+  text-align: justify;
+  margin: 50px auto;
+}
+
+input {
+  width: 400px; 
+  display: inline-block;
+  background-color: #273a71;
+  border: hidden;
+  padding: 10px 20px;
+  border-radius: 5px;
+  color: #fff;
+  margin-top: 30px;
+  
+}
+
+.comments {
+  width: 840px;
+  display: inline-block;
+  height: 200px;
+  background-color: #273a71;
+  color: #fff;
+  border-radius: 5px;
+  border: hidden;
+  padding: 10px 20px;
+  margin-top: 30px;
+}
+
+.form_button {
+  text-align: center;
+  text-transform: uppercase;
+  margin-top: 60px;
+  margin-left: 550px;
+  font-size: 18px;
+  background-color: #30bae7;
+  color: #ffffff;
+  border-radius: 4px;
+  display: block;
+  width: 300px;
+  height: 70px;
+  border: hidden;
+}
+
+footer {
+  height: 112px;
+  width: 1440px;
+  background-color: #344b8e;
+  text-align: center;
+  word-spacing: 20px;
+}
+
+footer a {
+  color: #fff;
+  margin-top: 50px;
+  font-size: 24px;
+}
+
+footer li {
+  display: inline-block;
+  margin-top: 40px;
+}
+
+footer a:hover {
+  content: '';
+  color: #3277b1;
+  text-decoration: none;
+}
+
+button:hover  {
+  content: '';
+  display: block;
+  box-shadow: 0 10px 10px   #273a71;
 }
