--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@ body {
   margin: 0;
 }
 
-div {
+div, article {
   box-sizing: border-box;
 }
 
@@ -269,11 +269,6 @@ h1 {
   margin: 0 auto;
 } 
 
-article {
-  text-align: left;
-  max-width: 330px;
-  margin-right: 30px;
-}
 
 article h3 {
   color: #FFF;
